[package]
name = "tasklog"
version = "0.3.0"
authors = ["tomyukn <5608467+tomyukn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
dialoguer = "0.8.0"
getset = "0.1.1"
prettytable-rs = "^0.8"
regex = "1"
termcolor = "1.1"

[dependencies.rusqlite]
version = "0.25"
features = ["bundled"]
